2002-09-12  Chris Blumenberg  <cblu@apple.com>

	Fixed livepage crash on Marklar. It is naughty to divide by 0 on marklar so we now check before doing that.

        * khtml/rendering/render_box.cpp:
        (RenderBox::printBackground):

2002-09-12  David Hyatt  <hyatt@apple.com>

	Fix crash on trekweb.com.  My simplified FOUC code was a little
	bit too simple. ;)
	
        * khtml/html/html_headimpl.cpp:
        (HTMLLinkElementImpl::setStyleSheet):
        (HTMLStyleElementImpl::childrenChanged):

2002-09-12  David Hyatt  <hyatt@apple.com>

	Fix the Warcraft 3 page on blizzard.com so that the relative
	positioned blocks inside centered tables inside enclosing tables
	with percentage widths work correctly.

	This fix also causes the textfields on mrskin.com to show up
	again.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::RenderBox):
        (RenderBox::setPos):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_container.cpp:
        (RenderContainer::addChild):
        * khtml/rendering/render_layer.cpp:
        (RenderLayer::constructZTree):
        * khtml/rendering/render_object.h:

2002-09-11  Maciej Stachowiak  <mjs@apple.com>

	Don't show the window here any more, now that WebBrowser will set
	it up to be shown properly itself.
	
        * kwq/KWQKHTMLPartBrowserExtension.mm:
        (KHTMLPartBrowserExtension::createNewWindow):

2002-09-11  David Hyatt  <hyatt@apple.com>

	Fix horizontal scrolling.  The HTML render object lies.  It lies, 
	I tell you.
	
        * khtml/rendering/render_layer.cpp:
        (RenderLayer::constructZTree):

2002-09-11  David Hyatt  <hyatt@apple.com>

	Fix clipping to work with layers.  This fixes the marquee
	(once again) on livepage.apple.com.
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::getClipRect):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_container.cpp:
        (RenderContainer::addChild):
        (RenderContainer::removeChildNode):